Implémentation des Test / Clean code